# llm-of-qud

./: .coderabbit.yaml  .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .secretlintignore  .vulture_whitelist.py  .yamllint.yml  AGENTS.md  Directory.Build.props  pyproject.toml  pyrightconfig.json  semgrep.yml
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  decision.md  phase.md
.github/workflows/: ci-cs.yml  ci-docs-and-governance.yml  ci-python.yml  ci-security.yml  pre-commit.yml  required-checks-gate.yml
agents/references/: coding-conventions.md  commit-policy.md  testing-strategy.md
brain/: AGENTS.md  __init__.py  app.py  protocol.py
brain/auth/: __init__.py  broker.py  device_flow.py  token_store.py
brain/db/: __init__.py  schema.py  writer.py
decompiled/: AGENTS.md  Directory.Build.props
docs/: AGENTS.md  architecture-v3.md  architecture-v5.md  ci-branch-protection.md  lint-policy.md
docs/adr/: 0000-adr-template.md  0001-architecture-v5-9-freeze.md  0002-phase-0-b-render-callback-pivot.md  0003-phase-0-a-task-7-closure-by-design.md  0004-phase-0-c-csharp-test-infra-deferral.md  0005-phase-0-e-current-build-state-pivot.md  0006-phase-0-f-command-issuance-api-pivot.md  0007-phase-0-f-prevent-action-scoped-to-abnormal-energy.md  0008-phase-0-g-heuristic-interrupt-semantics.md  0009-phase-0-g-rescope-judgment-boundary.md  0010-phase-0-g-heuristic-exploration-quality-non-goal.md  0011-phase-1-pr-1-scope.md  0012-phase-1-pr-1-plan-hotfix-probe-set-revision.md  0015-phase-1-pr-2-readiness-scope.md  0016-pr-2-1-tool-envelope-call-id.md  decision-log.md
docs/adr/decisions/: 2026-04-23-architecture-v5-9-freeze.md  2026-04-24-ci-green-pass-fixes.md  2026-04-24-ci-pre-commit-lint-and-branch-protection-tooling.md  2026-04-24-phase-0-b-observation-pivot-to-afterrendercallback.md  2026-04-24-relax-approval-0-and-last-push-approval-false-for-solo-coderabbit-gate.md  2026-04-24-repo-bootstrap-push-consolidation.md  2026-04-25-add-related-artifacts-section-to-adr-0005-to-comply-with-template.md  2026-04-25-coderabbit-follow-up-fixes-on-pr-7.md  2026-04-25-correct-deathlogger-citation-to-1696-1710.md  2026-04-25-defer-c-unit-test-infrastructure-for-phase-0-c-appendjsonstring-to-phase-2a.md  2026-04-25-phase-0-a-task-7-closure-by-operational-scope.md  2026-04-25-phase-0-c-readiness-rollup.md  2026-04-25-phase-0-e-pivot-from-birthbuildprofile-to-current-build-state.md  2026-04-25-reorder-adr-0005-sections-and-add-supersedes-per-template.md  2026-04-26-address-pr-13-review-findings-on-adr-0006-phase-0-f-plan-and-design-spec.md  2026-04-26-phase-0-f-adr-0007-scope-e-preventaction-to-abnormal-energy-catch-path-render-fallback-restoration.md  2026-04-26-phase-0-f-command-issuance-api-pivot-from-commandevent-send-to-direct-move-attackdirection.md  2026-04-26-phase-0-f-exit-memo-adr-0006-0007-future-artifact-placeholders-resolved.md  2026-04-26-phase-0-g-heuristic-exploration-quality-declared-non-goal-sharpen-adr-0009-decision-5-4-interpretation-no-policy-metric-patches.md  2026-04-26-phase-0-g-heuristic-interrupt-semantics-new-decision-channel-heuristic-specifics-lock.md  2026-04-26-phase-0-g-rescope-to-judgment-boundary-partial-supersede-adr-0008.md  2026-04-26-pr-13-follow-up-spec-citation-canonicalization-and-adr-0006-future-artifact-placeholder-fix.md  2026-04-26-pr-14-coderabbit-follow-up-citation-canonicalization-non-portable-path-narrative-getcellfromdirection-cite.md  2026-04-26-pr-15-coderabbit-follow-up-adr-0008-section-ordering-supersedes-before-related-artifacts.md  2026-04-26-pr-15-coderabbit-follow-up-stale-decision-record-filename-tmp-path-in-related-artifacts.md  2026-04-26-pr-15-markdown-lint-follow-up-md037-md029-fixes-on-adr-0008-phase-0-g-plan.md  2026-04-26-pr-g1-5-codex-re-review-follow-up-4-p2-contract-tightenings-on-spec-plan.md  2026-04-26-pr-g1-5-codex-review-follow-up-5-p2-contract-tightenings-on-adr-0009-spec-plan.md  2026-04-26-pr-g1-5-codex-round-4-follow-up-2-p2-tightenings-on-plan-md033-escape-on-prior-record.md  2026-04-26-pr-g1-5-codex-round-5-follow-up-2-p2-acceptance-workflow-tightenings-on-plan.md  2026-04-26-pr-g1-5-codex-round-6-follow-up-8-coderabbit-p2-docs-polish-citations-probe-3c-spec-adr-consistency-portable-refs.md  2026-04-27-add-phase-1-pr-1-readiness-plan-adr-0011.md  (+11 more)
docs/memo/: memory-architecture-research.md  phase-0-a-bootstrap-verification-2026-04-23.md  phase-0-a-exit-2026-04-23.md  phase-0-b-exit-2026-04-25.md  phase-0-b-tile-mode-finding-2026-04-25.md  phase-0-c-exit-2026-04-25.md  phase-0-d-exit-2026-04-25.md  phase-0-e-exit-2026-04-26.md  phase-0-f-exit-2026-04-26.md  phase-0-g-exit-2026-04-27.md  phase-1-pr-1-acceptance-progress-2026-04-29.md  phase-1-pr-1-probe-codex-second-opinion-2026-04-27.md  phase-1-pr-2-1-e2e-acceptance-2026-04-29.md  phase-1-pr-2-readiness-precedent-survey-2026-04-29.md  phase-1-pr-3-e2e-acceptance-2026-04-30.md  phase-1-progress-2026-04-29.md  phase-1-readiness-brainstorm-2026-04-27.md  test-strategy-codex-research-2026-04-23.md  v3.2-revision-plan.md  v5.4-codex-review-2026-04-23.md  v5.5-codex-review-2026-04-23.md  v5.6-codex-review-2026-04-23.md  v5.7-codex-review-2026-04-23.md  v5.8-codex-review-2026-04-23.md
docs/templates/: plan.md  spec.md  tasks.md
harness/: AGENTS.md  policy.yaml
mod/: AGENTS.md
mod/LLMOfQud/: BrainClient.cs  HeuristicPolicy.cs  IDecisionPolicy.cs  LLMOfQudBootstrap.cs  LLMOfQudSystem.cs  SnapshotState.cs  ToolRouter.cs  WebSocketPolicy.cs  manifest.json
scripts/: AGENTS.md  check_adr.rb  check_adr_decision.py  configure-branch-protection.sh  create_adr_decision.py  run-mypy.sh
tests/: test_adr_decision_scripts.py  test_brain_app.py  test_brain_auth.py  test_brain_db.py  test_mod_static_contracts.py  test_protocol_messages.py
(+13 files in other folders)
